# monet-plots

./: .gitignore  .pre-commit-config.yaml  .spellcheck.yaml  .spelling_wordlist.txt  404.html  DEPLOYMENT.md  README.md  debug_spatial_plot.py  example_facet_grid_spatial.py  example_facet_grid_spatial_simplified.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  temp_plot_generator.py  temp_spread_skill_plot.py  test_xarray_integration.py
api/: index.html
configuration/: index.html
docs/: getting-started.md  index.md
examples/: README.md  example_conditional_quantile.py  example_curtain.py  example_diurnal_error.py  example_facet_grid_spatial.py  example_facet_grid_spatial_simplified.py  example_fingerprint.py  example_polar.py  example_soccer.py  index.html  pivotal_weather_style.py  plot_basic_plotting.py  plot_brier_decomposition.py  plot_conditional_bias.py  plot_conditional_quantile.py  plot_curtain.py  plot_diurnal_error.py  plot_facet_grid.py  plot_facet_grid_spatial.py  plot_fingerprint.py  plot_grouped_distribution.py  plot_meteogram.py  plot_performance_diagram.py  plot_polar.py  plot_profile.py  plot_rank_histogram.py  plot_reliability_diagram.py  plot_rev.py  plot_roc_curve.py  plot_scatter.py  plot_scorecard.py  plot_soccer.py  plot_sp_scatter_bias.py  plot_spatial.py  plot_spatial_bias_scatter.py  plot_taylor_diagram.py  plot_timeseries.py  plot_upper_air.py  plot_wind_barbs.py  plot_wind_quiver.py  (+4 more)
gallery/: index.html  plot_basic_plotting.ipynb  plot_basic_plotting.py.md5  plot_basic_plotting_codeobj.pickle  plot_brier_decomposition.ipynb  plot_brier_decomposition.py  plot_brier_decomposition.py.md5  plot_brier_decomposition_codeobj.pickle  plot_categorical.ipynb  plot_categorical.py  plot_categorical.py.md5  plot_categorical_codeobj.pickle  plot_conditional_bias.ipynb  plot_conditional_bias.py  plot_conditional_bias.py.md5  plot_conditional_bias_codeobj.pickle  plot_conditional_quantile.ipynb  plot_conditional_quantile.py  plot_conditional_quantile.py.md5  plot_conditional_quantile_codeobj.pickle  plot_curtain.ipynb  plot_curtain.py  plot_curtain.py.md5  plot_curtain_codeobj.pickle  plot_diurnal_error.ipynb  plot_diurnal_error.py  plot_diurnal_error.py.md5  plot_diurnal_error_codeobj.pickle  plot_ensemble.ipynb  plot_ensemble.py  plot_ensemble.py.md5  plot_ensemble_codeobj.pickle  plot_facet_grid.ipynb  plot_facet_grid.py  plot_facet_grid.py.md5  plot_facet_grid_codeobj.pickle  plot_facet_grid_spatial.ipynb  plot_facet_grid_spatial.py  plot_facet_grid_spatial.py.md5  plot_facet_grid_spatial_codeobj.pickle  (+100 more)
getting-started/: index.html
performance/: index.html
plots/: index.html
search/: search_index.json
test_specifications/: MONET_Plots_Test_Framework_Modular_Analysis.md  MONET_Plots_Test_Framework_Specification.md  error_handling_tests_specifications.py  integration_tests_specifications.py  performance_tests_specifications.py  test_data_fixtures_specifications.py  unit_tests_specifications.py  visual_regression_tests_specifications.py
tests/: conftest.py  context.py  data.py  test_base.py  test_cartopy_utils.py  test_colorbars.py  test_colorbars_scaling.py  test_comprehensive_coverage.py  test_comprehensive_framework_validation.py  test_conditional_bias_lazy.py  test_error_handling_comprehensive.py  test_error_handling_general.py  test_error_handling_plots.py  test_grouped_distribution.py  test_hvplot.py  test_integration_complete_workflow.py  test_integration_error_recovery.py  test_integration_real_world_scenarios.py  test_integration_workflows_comprehensive.py  test_lazy_metrics.py  test_lazy_plots.py  test_logo.py  test_mapgen.py  (+23 more)
(+249 files in other folders)
