[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monet_plots"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "seaborn",
    "pandas",
    "cartopy",
    "xarray",
    "scipy",
    "numpy",
    "statsmodels",
    "dask",
]

[project.urls]
"Homepage" = "https://github.com/noaa-oar-arl/monet-plots"
"Bug Tracker" = "https://github.com/noaa-oar-arl/monet-plots/issues"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=8.5",
    "mkdocstrings[python]>=0.19",
    "pymdown-extensions>=9.0",
    "mkdocs-gallery>=0.10.0",
    "sphinx-gallery>=0.15.0",
]

[tool.ruff]
line-length = 88
exclude = ["examples"]
